--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
       <a href="#">Personal Website</a>
       <a href="#">Personal Siteplan</a>
     </nav>
-    
+    <p>Amon Aragão - WDD130</p>
 </body>
 </html>
