--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>"Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
 </head>
 <body>
+    <div id="content">
     <header>
         <a href="index.html" id="logo_link">
         <img class=logo src="images/logo.png" alt="Dry Oar Logo">
@@ -42,10 +44,11 @@
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+            <img class="boat" src="images/rapids.jpg" alt="rafting boat">
             <img class="icon" src="images/oar.jpg" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
@@ -53,6 +56,7 @@
             <a class="join" href="rivers.html">Join Us</a>
         </section>
     </main>
+    </div>
     <footer>
         <p>Dry Oar &copy; 2022 - Amon Bastos</p>
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
@@ -67,7 +71,7 @@
         <a href="https://instagram.com">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
-    </div>
     </footer>
+</div>
 </body>
 </html>
